# steam-shortcut-generator

./: LICENSE  README.md  pyproject.toml
src/steam_shortcut_generator/: app_info.py  app_list.py  desktop.py  files.py  icons.py  main.py  slug.py
