[tool.poetry]
authors = ["Ashleigh Udoh <ash@audoh.co.uk>"]
description = ""
name = "steam-shortcut-generator"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
vdf = "^3.3"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
requests = "^2.25.1"
appdirs = "^1.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
